--- a/style.css
+++ b/style.css
@@ -1,7 +1,34 @@
-.TimesButton{
-    color:#b1b3b5;
-    font-size: 1rem;
-    font-weight: bold;
-    background-color: transparent;
-    border: none;
+.TimesButton {
+  color: #b1b3b5;
+  font-size: 1rem;
+  font-weight: bold;
+  background-color: transparent;
+  border: none;
+}
+.audioListOption .listSpeedOptions {
+  display: none;
+  position: absolute;
+  background-color: #2a2f32;
+  min-width: 70px;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  z-index: 1;
+  margin-top: 23px;
+}
+.choosespeed:hover .listSpeedOptions {
+  display: block;
+}
+
+.audioListOption .listSpeedOptions li {
+  color: #b1b3b5;
+  font-size: 1rem;
+  font-weight: bold;
+  background-color: transparent;
+  border: none;
+  padding: 12px 16px;
+  display: block;
+}
+.audioListOption:hover {
+  display: block;
 }
